@@ -1,3 +1,6 @@
+2020-05-26 Franz Holzinger <franz@ttproducts.de>
+    * fix issues #4 and #5: Preserve quotes inside of quoted string in method transformWhere.
+
 2020-05-25 Franz Holzinger <franz@ttproducts.de>
     * fix issue #4: No spaces must be inserted between quotes. The parts between the quotes must remain as they are.
 
